--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,18 @@
 {
+  "extends": "oryx-tsconfig/base.json",
   "compilerOptions": {
-    "experimentalDecorators": true
+    "module": "CommonJS",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "target": "esnext",
+    "isolatedModules": false,
+    "sourceMap": true,
+    "allowJs": true,
+    "strict": false,
+    "outDir": "dist",
+    "rootDir": "src",
   },
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules", "**/*.spec.ts"]
 }
