--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,10 @@
 JWT_SECRET=something
 COOKIE_SECRET=something
-STRIPE_API_KEY=
-STRIPE_WEBHOOK_SECRET=
+DATABASE_URL=postgres://localhost/oryx_store
+REDIS_URL=redis://localhost:6379
+ADMIN_CORS=http://localhost:7000,http://localhost:7001
+STORE_CORS=http://localhost:8000
+
+ORYX_FF_SALES_CHANNELS=true
+
+
